ajuste no response  session